Add PHAT motor controller integration and enhance hardware configuration
- Introduced a new `phat_motor_controller` ROS 2 package for controlling motors via GPIO and reading accelerometer data via I2C.
- Added configuration files for PHAT motor controller parameters, including motor control GPIO pins and accelerometer settings.
- Updated `robot_graph.yaml` to include the PHAT motor controller, enabling its integration into the robot's operational framework.
- Enhanced the `setup_hardware.sh` script to install necessary dependencies for the PHAT motor controller.
- Improved documentation in `docs/hardware/` to guide users on the setup and usage of the PHAT motor controller.
- Removed outdated `README.md` for Realsense camera hardware setup to streamline documentation.

--- a/src/hardware_drivers/usb_microphone/CMakeLists.txt
+++ b/src/hardware_drivers/usb_microphone/CMakeLists.txt
@@ -12,6 +12,22 @@ find_package(ament_cmake_python REQUIRED)
 # Install Python package
 ament_python_install_package(${PROJECT_NAME})
 
+# Create entry point script for symlink installs
+install(CODE "
+  file(MAKE_DIRECTORY \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}\")
+  file(WRITE \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/usb_microphone_node\"
+    \"#!/usr/bin/env python3\\n\"
+    \"from usb_microphone.usb_microphone_node import main\\n\"
+    \"if __name__ == '__main__':\\n\"
+    \"    main()\\n\"
+  )
+  file(CHMOD \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/usb_microphone_node\"
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+                GROUP_READ GROUP_EXECUTE
+                WORLD_READ WORLD_EXECUTE
+  )
+")
+
 # Install launch files
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}/
