Update hardware configuration files and enhance parameter management
- Modified `odrive_params.yaml`, `phat_params.yaml`, `realsense_params.yaml`, and `usb_microphone_params.yaml` to include additional timing parameters and status topic configurations for improved device management.
- Updated `robot_graph.yaml` to reflect the latest configurations for the PHAT motor controller, ensuring compatibility with the new parameter structure.
- Enhanced the `health_check.sh` script to improve service monitoring and restart logic.
- Refactored various hardware driver nodes to utilize dynamic parameter retrieval for status topics and retry delays, promoting consistency across the system.
- Improved documentation in `docs/hardware/sparkfun_auto_phat.md` to clarify hardware setup and troubleshooting steps related to the updated configurations.

--- a/config/hardware/odrive_params.yaml
+++ b/config/hardware/odrive_params.yaml
@@ -21,6 +21,12 @@
     imu_topic: '/odrive/imu'
     cmd_vel_topic: '/cmd_vel'  # Subscribe to velocity commands
 
+    # Frame IDs
+    imu_frame_id: 'odrive_imu'
+
+    # Timing parameters
+    retry_delay: 2.0  # Seconds between connection retry attempts
+
     # Motor configuration (if needed)
     # axis0_id: 0
     # axis1_id: 1
