--- a/config/robot/robot_graph.yaml
+++ b/config/robot/robot_graph.yaml
@@ -144,9 +144,9 @@ robot:
     node: phat_motor_controller_node
     namespace: /hardware
     parameters:
-      i2c_bus: 1
-      accelerometer_address: 0x68
-      accelerometer_type: 'MPU6050'
+      i2c_bus: 7  # Jetson Orin Nano uses bus 7 (Raspberry Pi uses bus 1)
+      accelerometer_address: 0x69
+      accelerometer_type: 'ICM20948'
       enable_accelerometer: true
       publish_rate: 50.0
       motor_left_pwm_pin: 18
@@ -154,6 +154,22 @@ robot:
       motor_right_pwm_pin: 19
       motor_right_dir_pin: 20
       pwm_frequency: 1000
+      pwm_initial_duty_cycle: 0.0
+      wheelbase: 0.2
+      max_speed: 1.0
+      gpio_mode: 'BOARD'
+      status_topic: '/phat/status'
+      imu_topic: '/phat/imu'
+      cmd_vel_topic: '/cmd_vel'
+      imu_frame_id: 'phat_imu'
+      pwm_initial_duty_cycle: 0.0
+      wheelbase: 0.2
+      max_speed: 1.0
+      gpio_mode: 'BOARD'
+      status_topic: '/phat/status'
+      imu_topic: '/phat/imu'
+      cmd_vel_topic: '/cmd_vel'
+      imu_frame_id: 'phat_imu'
     topics:
       publish:
         - /phat/status
