Update CI workflow and hardware configurations for improved performance
- Modified the CI workflow to use `docker compose` instead of `docker-compose` for consistency with current Docker standards.
- Reduced camera frame rates in `realsense_params.yaml` to 15 FPS to alleviate bridge load and prevent connection drops.
- Updated `robot_graph.yaml` with notes on Foxglove Bridge connection stability and recommended adjustments for high-frequency camera topics.
- Removed outdated visualization configuration files to streamline the project structure and improve clarity.
- Added new documentation files for audio and 3D visualization, as well as troubleshooting guides for camera data and Foxglove Bridge connections, enhancing user support and system diagnostics.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,8 +152,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker-compose build
+          docker compose build
 
       - name: Test Docker setup
         run: |
-          docker-compose run --rm isaac-dev ./setup.sh --dry-run || true
+          docker compose run --rm isaac-dev ./setup.sh --dry-run || true
