Update hardware configurations and enhance audio support
- Enabled point cloud publishing in `realsense_params.yaml` for improved depth perception.
- Updated `usb_microphone_params.yaml` to require stereo channels for USB microphones, ensuring compatibility with various devices.
- Removed the outdated `monitor_graph.yaml` to streamline the project structure, consolidating all monitoring capabilities into the `robot_graph.yaml`.
- Enhanced `robot_graph.yaml` with new audio topic configurations for the USB microphone, improving audio data handling.
- Added a new setup script for USB microphone installation and configuration, ensuring proper user permissions and device checks.
- Updated visualization configurations in `foxglove_all_sensors.json` to include audio data, enhancing monitoring capabilities.
- Revised documentation in `QUICK_START.md` and `GRAPH_CONFIGURATIONS.md` to reflect the removal of the monitor graph and clarify graph management processes.

--- a/config/hardware/realsense_params.yaml
+++ b/config/hardware/realsense_params.yaml
@@ -8,7 +8,7 @@
     # Stream configuration
     enable_color: true
     enable_depth: true
-    enable_pointcloud: false
+    enable_pointcloud: true
 
     # Color stream parameters
     color_width: 640
